# router_shop_bot

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  dropalltables.py  main copy.py  main.py  pg_backup.sh  pg_restore.sh  pyproject.toml
